public/public.css
/* ... */
footer .cta p{
  color: var(--grey);
  font-family: 'Inter', sans-serif;
  line-height: 150%;
  letter-spacing: -0.16px;
}

footer .cta button {
  display: flex;
  padding: 12px 24px 14px 24px;
  align-items: center;
  gap: 10px;
  border-radius: 200px;
  background: var(--green);
  color: var(--grey);
  text-align: center;
  font-family: 'Inter', sans-serif;
  line-height: 150%;
  transition: all 0.2s ease;
}

footer hr {
  background-color: var(--grey);
}

footer a {
  color: var(--grey);
  text-align: center;
  font-family: 'Inter', sans-serif;
  font-size: 14px;
  line-height: 150%;
  letter-spacing: -0.14px;
}

footer span {
  color: var(--grey, #F5F0EC);
  font-family: 'Inter';
  font-size: 14px;
  line-height: 150%;
  letter-spacing: -0.14px;
}

footer button:hover {
  background-color: var(--grey);
  color: var(--green);
}

.hover\:cursor-pointer:hover {
  cursor: pointer;
}

@media (min-width: 640px) {
  .sm\:flex {
    display: flex;
  }

  .sm\:w-\[378px\] {
    width: 378px;
  }

  .sm\:flex-row {
    flex-direction: row;
  }

  .sm\:gap-0 {
    gap: 0px;
  }

  .sm\:gap-12 {
    gap: 3rem;
  }

  .sm\:gap-\[32px\] {
    gap: 32px;
  }

  .sm\:gap-\[72px\] {
    gap: 72px;
  }

  .sm\:px-10 {
    padding-left: 2.5rem;
    padding-right: 2.5rem;
  }

  .sm\:px-\[110px\] {
    padding-left: 110px;
    padding-right: 110px;
  }

  .sm\:text-5xl {
    font-size: 3rem;
    line-height: 1;
  }

  .sm\:text-\[40px\] {
    font-size: 40px;
  }
}

@media (min-width: 768px) {
  .md\:flex {
    display: flex;
  }

  .md\:hidden {
    display: none;
  }

  .md\:h-\[48px\] {
    height: 48px;
  }

  .md\:w-\[48px\] {
    width: 48px;
  }

  .md\:w-\[709px\] {
    width: 709px;
  }

  .md\:grid-cols-2 {
    grid-template-columns: repeat(2, minmax(0, 1fr));
  }

  .md\:grid-rows-1 {
    grid-template-rows: repeat(1, minmax(0, 1fr));
  }

  .md\:flex-row {
    flex-direction: row;
  }

  .md\:flex-col {
    flex-direction: column;
  }

  .md\:items-end {
    align-items: flex-end;
  }

  .md\:justify-between {
    justify-content: space-between;
  }

  .md\:gap-0 {
    gap: 0px;
  }

  .md\:gap-\[44px\] {
    gap: 44px;
  }

  .md\:gap-\[64px\] {
    gap: 64px;
  }

  .md\:self-start {
    align-self: flex-start;
  }

  .md\:px-0 {
    padding-left: 0px;
    padding-right: 0px;
  }

  .md\:px-40 {
    padding-left: 10rem;
    padding-right: 10rem;
  }

  .md\:pb-0 {
    padding-bottom: 0px;
  }

  .md\:pl-40 {
    padding-left: 10rem;
  }

  .md\:text-5xl {
    font-size: 3rem;
    line-height: 1;
  }

  .md\:text-\[45px\] {
    font-size: 45px;
  }
}

@media (min-width: 1280px) {
  .xl\:ml-\[96px\] {
    margin-left: 96px;
  }

  .xl\:flex-row {
    flex-direction: row;
  }

  .xl\:items-start {
    align-items: flex-start;
  }

  .xl\:gap-0 {
    gap: 0px;
  }

  .xl\:px-0 {
    padding-left: 0px;
    padding-right: 0px;
  }

  .xl\:px-64 {
    padding-left: 16rem;
    padding-right: 16rem;
  }

  .xl\:text-\[48px\] {
    font-size: 48px;
  }

  .xl\:text-\[60px\] {
    font-size: 60px;
  }

  .xl\:leading-\[115\%\] {
    line-height: 115%;
  }

  .xl\:leading-\[70px\] {
    line-height: 70px;
  }
}

